inicia o forms do main

--- a/index.html
+++ b/index.html
@@ -12,13 +12,26 @@
 
   <header class="header">
     <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="">
-    <h2>Trybewarts</h2>
+    <h1 id="trybewarts-header-title">Trybewarts</h1>
     <form class="trybewarts-login" action="">
       <input id="Login" type="text" placeholder="Login">
       <input id="Senha" type="text" placeholder="Senha">
       <button id="logar">Logar</button>
     </form>
   </header>
+
+  <main>
+    <form id="evaluation-form" action="">
+      <h2>Forms</h2>
+      <input type="text" name="" id="">
+      <input type="text">
+      <input type="text">
+      <Select>Casa:</Select>
+    </form>
+    <div id="photo"><img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt=""></div>
+  </main>
+
+
 
 <script src="script.js"></script>
 </body>
