--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="photo"><img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt=""></div>
   </main>
 
-
+<!-- teste -->
 
 <script src="script.js"></script>
 </body>
