--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Trybewarts</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,13 +22,27 @@
 
   <main>
     <form id="evaluation-form" action="">
+
       <h2>Forms</h2>
-      <input type="text" name="" id="">
-      <input type="text">
-      <input type="text">
-      <Select>Casa:</Select>
+
+      <input placeholder="Nome" type="text" name="" id="input-name">
+      <input placeholder="Sobrenome" type="text" name="" id="input-lastname">
+      <input placeholder="Email" type="email" name="" id="input-email">
+
+
+      <label for="house">Casa:</label>
+      <select name="house" id="house">
+        <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+        <option value="Reactpuff" id="reactpuff-house">Reactpuff</option> 
+        <option value="Corvinode" id="corvinode-house">Corvinode</option> 
+        <option value="Pytherina" id="pytherina-house">Pytherina</option>
+      </select>
+      
     </form>
-    <div id="photo"><img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt=""></div>
+
+    <div id="photo">
+      <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
+    </div>
   </main>
 
 <!-- teste -->
