--- a/index.html
+++ b/index.html
@@ -40,14 +40,38 @@
       
       <br>
       <hr>
-       <br>
+      <br>
 
-      <div>
-        <label for="" id="label-family">Qual sua família?</label>  
+      <div class="second-forms">
+        <div class="choose-family">
+          <p>Qual sua familia?</p>
+          <input type="radio" name="family" id="Frontend">
+          <label for="Frontend">Familia Frontend</label>
+          <br>
+          <input type="radio" name="family" id="Backend">
+          <label for="Backend">Familia Backend</label>
+          <br>
+          <input type="radio" name="family" id="FullStack">
+          <label for="FullStack">Familia FullStack</label>
+        </div>
 
-          <input type="text" name="family" id="" value="Frontend">
-          <input type="text" name="family" id="" value="Backend">
-          <input type="text" name="family" id="" value="FullStack">
+        <div class="choose-content">
+            <p>Qual Conteudo voce esta com mais vontade de aprender?</p>  
+            <input type="checkbox" id="HoFs" name="HoFs" value="HoFs">
+            <label for="HoFs">HoFs</label>
+            <input type="checkbox" id="Jest" name="Jest" value="Jest">
+            <label for="Jest">Jest</label>
+            <input type="checkbox" id="Promises" name="Promises" value="Promises">
+            <label for="Promises">Promises</label>
+            <br>
+            <input type="checkbox" id="React" name="React" value="React">
+            <label for="React">React</label>
+            <input type="checkbox" id="SQL" name="SQL" value="SQL">
+            <label for="SQL">SQL</label>
+            <input type="checkbox" id="Python" name="Python" value="Python">
+            <label for="Python">Python</label>
+        </div>
+        
       </div> 
    
     </form>
