--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <form id="evaluation-form" action="">
 
       <h2>Forms</h2>
+      <br>
 
       <div class="first-forms">
         <input placeholder="Nome" type="text" name="" id="input-name">
@@ -42,38 +43,111 @@
       <hr>
       <br>
 
-      <div class="second-forms">
-        <div class="choose-family">
-          <p>Qual sua familia?</p>
-          <input type="radio" name="family" id="Frontend">
-          <label for="Frontend">Familia Frontend</label>
-          <br>
-          <input type="radio" name="family" id="Backend">
-          <label for="Backend">Familia Backend</label>
-          <br>
-          <input type="radio" name="family" id="FullStack">
-          <label for="FullStack">Familia FullStack</label>
-        </div>
+      <div class="form-familia">
+        <label for="" id="label-family">Qual sua família?</label> 
+        <br> 
 
-        <div class="choose-content">
-            <p>Qual Conteudo voce esta com mais vontade de aprender?</p>  
-            <input type="checkbox" id="HoFs" name="HoFs" value="HoFs">
-            <label for="HoFs">HoFs</label>
-            <input type="checkbox" id="Jest" name="Jest" value="Jest">
-            <label for="Jest">Jest</label>
-            <input type="checkbox" id="Promises" name="Promises" value="Promises">
-            <label for="Promises">Promises</label>
-            <br>
-            <input type="checkbox" id="React" name="React" value="React">
-            <label for="React">React</label>
-            <input type="checkbox" id="SQL" name="SQL" value="SQL">
-            <label for="SQL">SQL</label>
-            <input type="checkbox" id="Python" name="Python" value="Python">
-            <label for="Python">Python</label>
-        </div>
-        
+        <input type="radio" name="family" id="Frontend" value="Frontend">
+        <label for="Frontend"> Frontend</label><br>
+
+        <input type="radio" name="family" id="Backend" value="Backend">
+        <label for="Backend">Backend</label><br>
+
+        <input type="radio" name="family" id="FullStack" value="FullStack" > 
+        <label for="FullStack">FullStack</label>
       </div> 
-   
+
+      <div class="form-conteudo">
+        <label for="" id="label-content"> Qual conteúdo você está com mais vontade de aprender?</label>
+        <br>  
+        <label for="HoFs">HoFs</label>
+        <input type="checkbox" name="HoFs" class="subject" value="HoFs">
+
+        <label for="Jest">Jest</label>
+        <input type="checkbox" name="Jest" class="subject" value="Jest">
+
+        <label for="Promises">Promises</label>
+        <input type="checkbox" name="Promises" class="subject" value="Promises">
+
+        <label for="React">React</label>
+        <input type="checkbox" name="React" class="subject" value="React">
+
+        <label for="SQL">SQL</label>
+        <input type="checkbox" name="SQL" class="subject" value="SQL">
+
+        <label for="Python">Python</label>
+        <input type="checkbox" name="Python" class="subject" value="Python">
+
+      </div>
+
+      <br>
+      <hr>
+      <br>
+
+      <div class="radio-forms">
+        <label for="" id="label-rate">Como você avalia a Trybewarts?</label>
+
+        <div>
+          <input type="radio" name="rate" id="1" value="">
+          <label for="1">1</label>
+        </div>
+        <div>
+          <input type="radio" name="rate" id="2" value="">
+          <label for="2">2</label>
+        </div>
+        <div>
+          <input type="radio" name="rate" id="3" value="">
+          <label for="3">3</label>
+        </div>
+        <div>
+          <input type="radio" name="rate" id="4" value="">
+          <label for="4">4</label>
+        </div>
+        <div>
+          <input type="radio" name="rate" id="5" value="">
+          <label for="5">5</label>
+        </div>
+        <div>
+          <input type="radio" name="rate" id="6" value="">
+          <label for="6">6</label>
+        </div>
+        <div>
+          <input type="radio" name="rate" id="7" value="">
+          <label for="7">7</label>
+        </div>
+        <div>
+          <input type="radio" name="rate" id="8" value="">
+          <label for="8">8</label>
+        </div>
+        <div>
+          <input type="radio" name="rate" id="9" value="">
+          <label for="9">9</label>
+        </div>
+        <div>
+          <input type="radio" name="rate" id="10" value="">
+          <label for="10">10</label>
+        </div>
+        <div>
+
+      </div>
+
+      <br>
+
+      <div class="textarea-form">
+        <label class="textarea">Deixe seu comentário:</labe> 
+          <br>
+        <textarea name="textarea" id="textarea" maxlength="500" placeholder="500"></textarea>
+      </div>
+    </div>
+
+    <div class="accept-form">
+      <label for ="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
+      <input type="checkbox" name="agreement" id="agreement">
+    </div>
+
+    <div class="button-final">
+      <button type="submit" id="submit-btn">Enviar</button>
+    </div>
     </form>
 
     <div id="photo">
@@ -81,6 +155,10 @@
     </div>
   </main>
 
+
+  <footer>
+    <span>Direitos reservados à Trybewarts©</span>
+  </footer>
 
 
 <script src="script.js"></script>
